<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/imie"
            android:ems="10"
            android:id="@+id/clientName"
            android:layout_weight="0"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/dodatki"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posypka_cena"
                android:textSize="15sp"
                android:id="@+id/checkBoxPosypka"
                android:onClick="aktualizujCene"
                android:buttonTint="#00acc1"

                 />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polewa_cena"
                android:textSize="15sp"
                android:id="@+id/checkBoxPolewa"
                android:layout_weight="0"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="aktualizujCene"
                android:buttonTint="#00acc1" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/ile_paczkow"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="-"
                android:textSize="20dp"
                android:onClick="sub"
                android:ellipsize="start"
                android:enabled="true" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="0"
                android:textSize="20sp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="#000000" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="+"
                android:textSize="20sp"
                android:onClick="add" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/cena"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:paddingLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="0"
            android:textSize="15sp"
            android:paddingLeft="8dp"
            android:paddingBottom="20dp"
            android:textColor="#000000" />


        <Button
            android:id="@+id/orderBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/zamow"
            android:textAllCaps="true"
            android:textSize="20sp"

            android:onClick="order"
            android:background="#0097a7"
            android:textColor="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/email"
                android:onClick="email"
                android:layout_weight="1"
                android:textAllCaps="true"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms"
                android:id="@+id/sms"
                android:onClick="sms"
                android:layout_weight="1"
                android:textAllCaps="true"
 />


        </LinearLayout>





        <ImageView
            android:src="@drawable/paczki"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:onClick="openBrowser"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/odwiedz_nas"
            android:id="@+id/textView"
            android:layout_weight="0" />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="0"
            android:paddingTop="5dp"
            android:paddingLeft="8dp"
            android:background="@color/dim_foreground_material_dark" />


    </LinearLayout>
</ScrollView>